fix movers overlapping (#24349)

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -572,11 +572,13 @@
 		.components-button.has-icon.block-editor-block-mover-button.block-editor-block-mover-button {
 			min-width: $button-size;
 			width: $button-size;
+			overflow: hidden;
 		}
 
 		&.is-horizontal .components-button.has-icon.block-editor-block-mover-button.block-editor-block-mover-button {
 			min-width: $block-toolbar-height/2;
 			width: $block-toolbar-height/2;
+			overflow: hidden;
 		}
 	}
 
